--- a/LHL_Optimisation.ipynb
+++ b/LHL_Optimisation.ipynb
@@ -633,13 +633,15 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "```\n",
     "Name       | Model |    R2 | R2 (adj.) |  RMSE | Sigma | AIC weights | BIC weights | Performance-Score\n",
     "------------------------------------------------------------------------------------------------------\n",
     "kaplan_lm  |    lm | 0.639 |     0.629 | 0.678 | 0.696 |       1.000 |       1.000 |           100.00%\n",
-    "lucerne_lm |    lm | 0.429 |     0.413 | 0.852 | 0.876 |     < 0.001 |     < 0.001 |             0.00%"
+    "lucerne_lm |    lm | 0.429 |     0.413 | 0.852 | 0.876 |     < 0.001 |     < 0.001 |             0.00%\n",
+    "```"
    ]
   },
   {
